Title added to Index.html and reference made in README.md

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Great
+        </title>
+    </head>
     <body>
         <p>
             Hi
